# mcnp_input_generator

./: .gitignore  LICENSE  Pipfile  README.md  setup.cfg
doc/mcnp_input_generator/: constants.html  index.html  mcnp_class.html  mcnp_input_generator.html  scad.html  validate.html
mcnp_input_generator/: constants.py  mcnp_class.py  mcnp_input_generator.py  scad.py
tests/: test_mcnp_class.py  test_mcnp_input_generator.py  test_scad.py
tests/files/: inp  test_generator.scad  test_toFile.scad
