[metadata]
name = mcnp_input_generator
version = 0.1
description = an unofficial inputfile generator for MCNP
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = ikarino99

[options]
packages = find:
install_requires =
    solidpython >= 1.1.1, < 2.0
    numpy >= 1.21.4, < 2.0
